# ergo_ms_api

./: .gitignore  MODULES.md  README.md  RULES_OF_CODING.md  TASKS.md  pyproject.toml
commands/: README.md  __main__.py  definitions.py
redis/: redis.windows.conf
scripts/: __init__.py  __main__.py  base.py  commands.py
src/: __init__.py  manage.py
src/config/: README.md  __init__.py  asgi.py  auto_config.py  autoconfig.py  celery.py  database_config.yaml  env.py  integration_config.yaml  modules_integration.conf  modules_integration.py  serializer_generator.py  urls.py  wsgi.py  yasg.py
src/config/auto_api/: examples.yaml
src/config/patterns/: __init__.py  base.py  development.py  local.py  production.py
src/config/settings/: __init__.py  apps.py  auth.py  auto_api.py  base.py  celery.py  cors.py  database.py  integration.py  localization.py  logger.py  server.py  smtp.py  static.py  swagger.py  templates.py
src/core/cms/: apps.py  commands.py  models.py  queries.py  urls.py  views.py
src/core/cms/adp/: apps.py  queries.py  urls.py  views.py
src/core/cms/adp/migrations/: 0001_initial.py  (+3 more)
src/core/cms/migrations/: 0001_initial.py  0002_alter_shortcode_date_of_creation_and_more.py  0002_alter_shortcode_date_of_creation_groupurl_review.py  0002_delete_emailconfirmationcode.py  0002_object_type_tag_category_object_shortcode_and_more.py  0002_remove_shortcode_parameter_shortcode_and_more.py  0003_groupcategory_permissionmark_expandedgroup_and_more.py  0003_initial.py  0004_expandedpermission_group_category_and_more.py  0004_remove_role_privelege_delete_privelege_delete_role.py  0005_alter_pagecomponentaccession_component_id.py  0005_initial.py  0006_alter_pageaccession_permission_and_more.py  0007_remove_pagecomponentaccession_permission_accession_and_more.py  0008_remove_shortcode_parameter_shortcode_and_more.py  0009_remove_category_parentcategory_remove_object_type_and_more.py
src/core/modules/messenger/: apps.py
src/core/standard_functions/: __init__.py  apps.py  daphne.py  enums.py  methods.py  serializers.py  urls.py  views.py
src/core/utils/: apps.py  daphne.py  methods.py  tasks.py  urls.py  views.py
src/core/utils/auto_api/: api_classes_code.py  auto_config.py  base_handler.py  base_views.py  methods_generation.py  modules_integration.py
src/core/utils/base/: base_views.py
src/core/utils/database/: __init__.py  base.py  dbconfig.py  types.py
src/core/utils/integration/: base_handler.py  modules_integration.py
src/core/utils/server/: daphne.py  redis.py
src/external_modules/bi/: apps.py
src/external_modules/bpm/: apps.py
src/external_modules/crm/: apps.py
src/external_modules/hcm/: apps.py
src/external_modules/kms/: apps.py  serializers.py  urls.py  views.py
src/external_modules/lms/: apps.py
src/external_modules/sis/: apps.py
src/external_modules/some_module/: apps.py
src/external_modules/some_module/scripts/: script.cpp  script.cs  script.js  script.php  script.py  script.rb
src/handlers/: base_handler.py
src/handlers/Roles/: role_handler.py
src/handlers/examples/files/: download_handler.py
src/handlers/examples/statistic/: tasks_graph_handler.py
src/handlers/files/: download_handler.py  upload_handler.py
src/handlers/messages/: messages_handler.py
src/handlers/statistic/: tasks_graph_handler.py
(+36 files in other folders)
