[tool.poetry]
name = "ergo_ms_api"
version = "0.1.0"
description = ""
authors = ["Eugene Sergeevich Muzalevsky <53302920+DohaoSTR@users.noreply.github.com>"]
packages = [
    { include = "src", from = "", format = ["sdist"] }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.8"
numpy = "^2.2.1"
pandas = "^2.2.3"
setuptools = "^75.7.0"
wheel = "^0.45.1"
daphne = "^4.1.2"
whitenoise = "^6.8.2"
psycopg2 = "^2.9.10"
psutil = "^6.1.1"
transformers = "^4.47.1"
django-environ = "^0.11.2"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.0"
pyyaml = "^6.0.2"
sqlalchemy = "^2.0.37"

[tool.poetry.scripts]
cmd = "scripts.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"